prevent textarea focus on mobile devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -117,7 +117,8 @@ button:active {
 
   .operation {
     width: 90vw;
-    height: 20vh;
+    height: 10vh;
+    caret-color: transparent;
   }
 
   button {
@@ -133,7 +134,7 @@ button:active {
   .\30 { /* 0 */
     width: 440px;
     border-radius: 100px;
-    padding: 0 80gipx;
+    padding: 0 80px;
   }
 
 }
